--- a/01_reg_with_arima.ipynb
+++ b/01_reg_with_arima.ipynb
@@ -191,16 +191,25 @@
     "HOLDOUT = 28\n",
     "PERIOD = 7\n",
     "\n",
+    "# built in dataset\n",
     "attends = load_emergency_dept()\n",
     "\n",
     "# train-test split\n",
     "train = attends[:-HOLDOUT]\n",
     "test = attends[-HOLDOUT:]\n",
     "\n",
-    "\n",
     "X = get_seasonal_indexes(train.index)\n",
     "# quick look at \n",
     "X.tail(7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use auto_arima with one small change\n",
+    "\n",
+    "In pass in the regressors in X (known as exogenous variables)."
    ]
   },
   {
@@ -219,6 +228,15 @@
    "outputs": [],
    "source": [
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Making a forecast\n",
+    "\n",
+    "We will do this similar to Prophet and create a \"future\" dataframe that holds all of our regressors for the period we want to predict."
    ]
   },
   {
@@ -251,8 +269,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# future_dataframe just holds our X regression i.e. seasonal indexes in the future\n",
     "future_dataframe = make_future_dataframe(HOLDOUT, train)\n",
     "future_dataframe.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The forecast function is just for convenience.  It calls the model.predict method"
    ]
   },
   {
@@ -296,6 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Forecast and get 95 and 80% prediction intervals \n",
     "preds, intervals_95 = forecast(model, future_dataframe, alpha=0.05)\n",
     "preds, intervals_80 = forecast(model, future_dataframe, alpha=0.2)\n",
     "intervals = np.array([intervals_80, intervals_95])"
@@ -310,82 +337,6 @@
     "plot_prediction_intervals(train, preds, intervals, test=test, \n",
     "                          show_train_size=90)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "516\n",
-      "{'model': Average(), 'mae': 22.64866385564089}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "from forecast_tools.model_selection import auto_naive\n",
-    "\n",
-    "# the reattends data we used in class.\n",
-    "URL = \"https://raw.githubusercontent.com/health-data-science-OR/hpdm097-datasets\" \\\n",
-    "    + \"/master/ed_reattends_day.csv\"\n",
-    "\n",
-    "# PARAMETERS for analysis.\n",
-    "TRAIN_SIZE = len(reattends) // 3\n",
-    "HORIZON = 28\n",
-    "# seasonal period for auto_naive\n",
-    "PERIOD = 365\n",
-    "# step size for auto_naive (how many data points to add between splits.)\n",
-    "STEP = 7\n",
-    "\n",
-    "# read data\n",
-    "reattends = pd.read_csv(URL, parse_dates=True, dayfirst=True, index_col='date')\n",
-    "reattends.index.freq = 'D'\n",
-    "\n",
-    "# temporal train-test sploot\n",
-    "train, test = reattends[:TRAIN_SIZE], reattends[TRAIN_SIZE:]\n",
-    "\n",
-    "# This is how big my training data set is (with default settings should be 516)\n",
-    "print(len(train))\n",
-    "\n",
-    "# auto naive makes multiple train test splits with the training data.\n",
-    "# so we need the min training size to be > 365 \n",
-    "\n",
-    "# just using rolling forecast origin\n",
-    "# I think the bug is with the method parameter.  if you set it to 'ro' it works.\n",
-    "results = auto_naive(train, horizon=HORIZON, step=STEP, seasonal_period=PERIOD, \n",
-    "                   method='ro', metric='mae', min_train_size=365)\n",
-    "\n",
-    "# mine selected average with a mae of around 22.6\n",
-    "print(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
